# mahi-template

./: .gitignore  CMakeLists.txt  README.md
data/save_data/: data_2020-10-30_11.54.19.csv
include/: ExperimentHelper.hpp  MyClass.hpp
src/: MyClass.cpp  test.cpp  test_collecting_data.cpp  test_loading_data.cpp  test_saving_data.cpp  test_timing_elements.cpp
test/: CMakeLists.txt  test_console_input.cpp  test_loading_data.cpp  test_timing_elements.cpp
